// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Base Component) Checkbox matching the snapshot 1`] = `
.c0 {
  text-align: left;
  margin-bottom: 0;
  -webkit-letter-spacing: .1rem;
  -moz-letter-spacing: .1rem;
  -ms-letter-spacing: .1rem;
  letter-spacing: .1rem;
  text-transform: inherit;
  font-family: "ff-din-web",Helvetica,Arial,sans-serif;
  font-size: 1.4rem;
  font-weight: 500;
  color: #00003C;
}

.c6 {
  fill: none;
  stroke-width: 20;
  stroke-linecap: round;
  stroke: #FFFFFF;
}

.c4 {
  fill: none;
  stroke-width: 20;
  stroke-linecap: round;
}

.c2 {
  width: 2.5rem;
  margin-right: .9rem;
}

.c7 .c1 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7 .c1 .c5 {
  display: none;
}

.c7 .c1 .c3 {
  stroke: #0073D1;
}

.c7 input:checked + .c1 .c3 {
  fill: #0073D1;
}

.c7 input:checked + .c1 .c5 {
  display: block;
  stroke: #FFFFFF;
  stroke-dasharray: 200;
  stroke-dashoffset: 0;
}

<CheckboxBase
  input={
    Object {
      "onChange": [Function],
      "value": false,
    }
  }
>
  <styled.label
    color="textPrimary"
    fontSize="1.4rem"
    fontWeight="500"
    letterSpacing=".1rem"
    lowercase={true}
  >
    <label
      className="c0"
      color="textPrimary"
      fontSize="1.4rem"
      fontWeight="500"
      letterSpacing=".1rem"
    >
      <input
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
        value={false}
      />
      <Styled(CheckboxSVG)
        checked={false}
        width="2.5rem"
      >
        <CheckboxSVG
          checked={false}
          className="c1 c2"
          width="2.5rem"
        >
          <svg
            className="c1 c2"
            viewBox="0 0 190 190"
            xmlns="http://www.w3.org/2000/svg"
          >
            <Styled(Rect)
              checked={false}
              width="2.5rem"
            >
              <Rect
                checked={false}
                className="c3 c4"
                width="2.5rem"
              >
                <rect
                  className="c3 c4"
                  height="185"
                  rx="10"
                  ry="10"
                  width="185"
                  x="2.5"
                  y="2.5"
                />
              </Rect>
            </Styled(Rect)>
            <Styled(BaseCheck)
              checked={false}
              width="2.5rem"
            >
              <BaseCheck
                checked={false}
                className="c5 c6"
                width="2.5rem"
              >
                <polyline
                  className="c5 c6"
                  points="38.75 98.75 77.75 134.75 151.25 55.25"
                />
              </BaseCheck>
            </Styled(BaseCheck)>
          </svg>
        </CheckboxSVG>
      </Styled(CheckboxSVG)>
      <span>
        Example Checkbox
      </span>
    </label>
  </styled.label>
</CheckboxBase>
`;

exports[`(Component) Checkbox matching the snapshot 1`] = `
.c1 {
  text-align: left;
  margin-bottom: 0;
  -webkit-letter-spacing: .1rem;
  -moz-letter-spacing: .1rem;
  -ms-letter-spacing: .1rem;
  letter-spacing: .1rem;
  text-transform: inherit;
  font-family: "ff-din-web",Helvetica,Arial,sans-serif;
  font-size: 1.4rem;
  font-weight: 500;
  color: #00003C;
}

.c7 {
  fill: none;
  stroke-width: 20;
  stroke-linecap: round;
  stroke: #FFFFFF;
}

.c5 {
  fill: none;
  stroke-width: 20;
  stroke-linecap: round;
}

.c3 {
  width: 2.5rem;
  margin-right: .9rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.6rem;
  font-weight: 400;
}

.c0 .c2 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 .c2 .c6 {
  display: none;
}

.c0 .c2 .c4 {
  stroke: #0073D1;
}

.c0 input {
  width: 0;
  height: 0;
  opacity: 0;
}

.c0 input:checked + .c2 .c4 {
  fill: #0073D1;
}

.c0 input:checked + .c2 .c6 {
  display: block;
  stroke: #FFFFFF;
  stroke-dasharray: 200;
  stroke-dashoffset: 0;
}

<Styled(CheckboxBase)
  borderColor="rocketBlue"
  checkColor="white"
  fillColor="rocketBlue"
  input={
    Object {
      "onChange": [Function],
      "value": false,
    }
  }
>
  <CheckboxBase
    borderColor="rocketBlue"
    checkColor="white"
    className="c0"
    fillColor="rocketBlue"
    input={
      Object {
        "onChange": [Function],
        "value": false,
      }
    }
  >
    <styled.label
      borderColor="rocketBlue"
      checkColor="white"
      className="c0"
      color="textPrimary"
      fillColor="rocketBlue"
      fontSize="1.4rem"
      fontWeight="500"
      letterSpacing=".1rem"
      lowercase={true}
    >
      <label
        className="c0 c1"
        color="textPrimary"
        fontSize="1.4rem"
        fontWeight="500"
        letterSpacing=".1rem"
      >
        <input
          onChange={[Function]}
          onClick={[Function]}
          type="checkbox"
          value={false}
        />
        <Styled(CheckboxSVG)
          checked={false}
          width="2.5rem"
        >
          <CheckboxSVG
            checked={false}
            className="c2 c3"
            width="2.5rem"
          >
            <svg
              className="c2 c3"
              viewBox="0 0 190 190"
              xmlns="http://www.w3.org/2000/svg"
            >
              <Styled(Rect)
                checked={false}
                width="2.5rem"
              >
                <Rect
                  checked={false}
                  className="c4 c5"
                  width="2.5rem"
                >
                  <rect
                    className="c4 c5"
                    height="185"
                    rx="10"
                    ry="10"
                    width="185"
                    x="2.5"
                    y="2.5"
                  />
                </Rect>
              </Styled(Rect)>
              <Styled(BaseCheck)
                checked={false}
                width="2.5rem"
              >
                <BaseCheck
                  checked={false}
                  className="c6 c7"
                  width="2.5rem"
                >
                  <polyline
                    className="c6 c7"
                    points="38.75 98.75 77.75 134.75 151.25 55.25"
                  />
                </BaseCheck>
              </Styled(BaseCheck)>
            </svg>
          </CheckboxSVG>
        </Styled(CheckboxSVG)>
        <span>
          Example Checkbox
        </span>
      </label>
    </styled.label>
  </CheckboxBase>
</Styled(CheckboxBase)>
`;
